# GenAI-AgenticAICERT

./: .gitignore  CommandsToUse.txt  ImportantStuffs - GenAI Class.txt  README.md  StudyMaterials.txt  apiCallAllTheF1Functions.py  finetuning.ipynb  finetuning_of_LLMs_&_Transformers_Introduction.ipynb  requirements.txt
.gradio/: gradio_forUI_step_by_step.ipynb
App/: api.py  apiReadJSONFiles.py  apifortesting.py
CrewAI/crewaidevelopment/: README.md  pyproject.toml
CrewAI/crewaidevelopment/src/crewaidevelopment/: crew.py  main.py  report.md
CrewAI/crewaidevelopment/src/crewaidevelopment/config/: agents.yaml  tasks.yaml
Langraph_Tutorial/: Assgnmt-1-BuildYourFirstAgent.ipynb  langgraph_comprehensive_tutorial.ipynb  langgraph_tutorial.ipynb  langgraph_tutorial_trainer.ipynb  langgraphcomprehensive__tutorial_trainer.ipynb  travel_planner.ipynb
MULTIAGENT_WITH_GRAPH/googleADK/: intro_to_adk.ipynb  requirements.txt
RAG/: MultiModal_RAG_with_llamaIndex_and_LanceDB.ipynb  basic_rag.ipynb  basic_rag_pdffileloader.ipynb
RAG/.gradio/: gradio_forUI_step_by_step.ipynb
RAG/chroma_langchain_db/: chroma.sqlite3
VOICEBOT/: voicebot_tutorial_practice.ipynb
agents/CompitatorAgent/: compitator_agent_Trainer.ipynb  compitator_agent_practice.ipynb  compitator_agent_trainer.py
agents/SqlAgents/: sql_agent.ipynb  sql_agent_trainer.ipynb
my_first_mcp_server/: database.py  hr_leave_management.db  main.py  pyproject.toml
open_ai_function_calling/: openai_function_calling_feature_practice.ipynb  openai_function_calling_feature_trainer.ipynb
(+6 files in other folders)
