[project]
name = "crewaidevelopment"
version = "0.1.0"
description = "CrewAiDevelopment using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
crewaidevelopment = "crewaidevelopment.main:run"
run_crew = "crewaidevelopment.main:run"
train = "crewaidevelopment.main:train"
replay = "crewaidevelopment.main:replay"
test = "crewaidevelopment.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
